[🚀 사이클2 - 미션 (예약 변경/취소와 에러 처리)] 무빙 미션 제출합니다. (#432)
* Migration: Initial Commit

* docs: readme 기능 요구사항 작성

* feat: 테마 도메인 추가

* feat: 시작 시간 정각 검증 로직 추가

* chore: theme 테이블 스키마 추가

* fix: theme 테이블 스키마 순서 변경

* fix: Theme 도메인 id 추가

* feat: ThemeRequest, ThemeResponse 추가

* feat: 테마 추가 API 구현

* feat: 테마 삭제 API 구현

* refactor: 삭제 상태코드 변경

- 삭제에서 없는 ID 입력 시 예외처리 제거

* fix: 삭제 http status code를 204로 수정

* test: 예약 정보에 테마 정보를 포함하는 테스트로 수정

* feat: 예약 정보에 테마 정보 도입

* feat: ReservationRequest, ReservationResponse 테마 추가

* feat: Reservation에 테마 정보를 추가

* docs: 1단계 스터디 로그 작성

* feat: 특정 테마, 예약 시간 ID를 통한 조회 기능 추가

* feat: 예약 추가 기능 수정

- reservaiton 테이블 삽입 후 도메인을 반환하기 위해 join하는 과정을 제거함.
- ReservationService에서 다른 Service를 의존하도록 변경함.
- ReservationRepository에 다른 service의 response 값을 전달함.

* test: RoomescapeApplicationTest에 DirtiesContext 추가

* docs: 1단계 스터디 로그 내용 추가

* chore: reservation name을 username으로 변경

* feat: 테마 id와 날짜를 기반으로 예약 가능한 시간 조회 API 구현

* feat: 사용자 이름 검증 기능 추가

* docs: 2단계 스터디 로그 작성

* feat: 테마 조회 API 구현

* feat: 인기 테마 조회 API 구현

* refactor: API 명세서 추가, 반영

* chore: DB 스키마 제약 조건 추가

- 예약 테마 삭제 시 CASCADE
- 예약 시간 삭제 시 RESTRICT

* test: ThemeRepository 테스트 추가

* refactor: dto 클래스를 레코드로 전환

* test: ReservationRepository 테스트 추가

* test: ReservationRepository 테스트 추가

* chore: DB 스키마 제약 조건 수정

* test: ReservationTimeRepository 테스트 추가

* test: ThemeServiceTest 추가

* feat: 존재하지 않는 테마 삭제 시 예외 처리 추가

* test: TimeServiceTest 추가

* feat: 존재하지 않는 시간 추가, 삭제 예외 처리 추가

* test: ReservationServiceTest 테스트 추가

* feat: 존재하지 않는 예약 추가, 삭제 예외 처리 추가

* test: ThemeControllerTest 테스트 추가

* test: ReservationTimeControllerTest 테스트 추가

* test: ReservationControllerTest.java 테스트 추가

* docs: 3단계 스터디 로그 작성

- 2단계 스터디 로그 수정

* refactor: 메소드 네이밍 수정

* feat: 사용자 화면 페이지 구현

* docs: readme에 토론 규칙 문서 추가

* refactor: @Controller를 @RestController로 변경

* refactor: 도메인 생성자에서 validate 순서 변경

* refactor: delete 시 조회 쿼리 제거하고 영향받은 행 수로 존재 여부 판단

* refactor: Repository의 findById를 Optional로 변환

* refactor: dat