@@ -1,10 +1,16 @@
 package roomescape.service;
 
+import java.time.Clock;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
+import roomescape.dto.ReservationAllResponse;
+import roomescape.dto.ReservationPatchRequest;
 import roomescape.dto.ReservationRequest;
 import roomescape.dto.ReservationResponse;
+import roomescape.exception.ErrorCode;
+import roomescape.exception.RoomescapeException;
 import roomescape.model.Reservation;
 import roomescape.model.ReservationTime;
 import roomescape.model.Theme;
@@ -18,38 +24,42 @@ public class ReservationService {
     private final ReservationRepository reservationRepository;
     private final TimeRepository timeRepository;
     private final ThemeRepository themeRepository;
+    private final Clock clock;
 
     public ReservationService(ReservationRepository reservationRepository, TimeRepository timeRepository,
-                              ThemeRepository themeRepository) {
+                              ThemeRepository themeRepository, Clock clock) {
         this.reservationRepository = reservationRepository;
         this.timeRepository = timeRepository;
         this.themeRepository = themeRepository;
+        this.clock = clock;
     }
 
-    public List<ReservationResponse> read() {
+    public ReservationAllResponse read() {
         List<Reservation> reservations = reservationRepository.findAll();
-        return reservations.stream()
+        List<ReservationResponse> responses = reservations.stream()
                 .map(ReservationResponse::from)
-                .collect(Collectors.toList());
+                .toList();
+        return new ReservationAllResponse(responses);
     }
 
     public void removeById(Long id) {
         int deleteCnt = reservationRepository.deleteById(id);
-        if(deleteCnt == 0) {
-            throw new IllegalArgumentException("존재하지 않는 예약의 ID 입니다.");
+        if (deleteCnt == 0) {
+            throw new RoomescapeException(ErrorCode.RESERVATION_NOT_FOUND);
         }
     }
 
     public ReservationResponse register(ReservationRequest reservationRequest) {
         ReservationTime time = timeRepository.findById(reservationRequest.timeId())
-                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 시간입니다."));
+                .orElseThrow(() -> new RoomescapeException(ErrorCode.RESERVATION_TIMEID_NOT_FOUND));
+        reservationRequestDayCheck(reservationRequest.date(), time);
         Theme theme = themeRepository.findById(reservationRequest.themeId())
-                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 테마입니다."));
+                .orElseThrow(() -> new RoomescapeException(ErrorCode.RESERVATION_THEMEID_NOT_FOUND));
 
         if (reservationRepository.existsByDateAndTimeIdAndThemeId(reservationRequest.date(),
                 reservationRequest.timeId(),
                 reservationRequest.themeId())) {
-            throw new IllegalArgumentException("이미 존재하는 예약입니다.");
+            throw new RoomescapeException(ErrorCode.RESERVATION_DUPLICATE);
         }
 
         Reservation reservation = new Reservation(null, reservationRequest.name(), reservationRequest.date(),
@@ -58,4 +68,40 @@ public class ReservationService {
         return ReservationResponse.from(saved);
     }
 
+    private void reservationRequestDayCheck(LocalDate date, ReservationTime time) {
+        LocalDateTime now = LocalDateTime.now(clock);
+        if (date.isBefore(now.toLocalDate())) {
+            throw new RoomescapeException(ErrorCode.RESERVATION_WRONG_DATE);
+        }
+        if (date.isEqual(now.toLocalDate()) && time.isPast(now)) {
+            throw new RoomescapeException(ErrorCode.RESERVATION_WRONG_TIME);
+        }
+    }
+
+    public ReservationAllResponse readByName(String name) {
+        List<Reservation> reservations = reservationRepository.findByName(name);
+        List<ReservationResponse> responses = reservations.stream()
+                .map(ReservationResponse::from)
+                .toList();
+        return new ReservationAllResponse(responses);
+    }
+
+    public ReservationResponse patchById(Long id, ReservationPatchRequest reservationPatchRequest) {
+        if (!reservationRepository.existsById(id)) {
+            throw new RoomescapeException(ErrorCode.RESERVATION_NOT_FOUND);
+        }
+        Reservation reservation = reservationRepository.findById(id);
+        ReservationTime time = timeRepository.findById(reservationPatchRequest.timeId())
+                .orElseThrow(() -> new RoomescapeException(ErrorCode.RESERVATION_TIMEID_NOT_FOUND));
+        reservationRequestDayCheck(reservation.date(), reservation.time());
+        reservationRequestDayCheck(reservationPatchRequest.date(), time);
+
+        if (reservationRepository.existsByDateAndTimeIdAndThemeId(reservationPatchRequest.date(),
+                reservationPatchRequest.timeId(), reservation.themeId())) {
+            throw new RoomescapeException(ErrorCode.RESERVATION_DUPLICATE);
+        }
+
+        return ReservationResponse.from(
+                reservationRepository.update(reservationPatchRequest.date(), reservationPatchRequest.timeId(), id));
+    }
 }
