@@ -1,14 +1,18 @@
 package roomescape.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import roomescape.dto.TimeAllResponse;
 import roomescape.dto.TimeRequest;
 import roomescape.dto.TimeResponse;
+import roomescape.exception.ErrorCode;
+import roomescape.exception.RoomescapeException;
 import roomescape.model.ReservationTime;
 import roomescape.repository.ReservationRepository;
 import roomescape.repository.TimeRepository;
 
+@Slf4j
 @Service
 public class TimeService {
 
@@ -20,36 +24,48 @@ public class TimeService {
         this.reservationRepository = reservationRepository;
     }
 
-    public List<TimeResponse> readAll() {
+    public TimeAllResponse readAll() {
         List<ReservationTime> times = timeRepository.findAll();
-        return times.stream()
+        List<TimeResponse> responses = times.stream()
+                .filter(this::isValidTime)
                 .map(TimeResponse::from)
-                .collect(Collectors.toList());
+                .toList();
+        return new TimeAllResponse(responses);
     }
 
-    public List<TimeResponse> readAllByThemeIdAndDate(Long themeId, String date) {
+    public TimeAllResponse readAllByThemeIdAndDate(Long themeId, String date) {
         List<ReservationTime> times = timeRepository.findAllByThemeIdAndDate(themeId, date);
-        return times.stream()
+        List<TimeResponse> responses = times.stream()
+                .filter(this::isValidTime)
                 .map(TimeResponse::from)
-                .collect(Collectors.toList());
+                .toList();
+        return new TimeAllResponse(responses);
+    }
+
+    private boolean isValidTime(ReservationTime time) {
+        if (!time.isValid()) {
+            log.warn("유효하지 않는 시간 데이터 발견: id:{}, startAt:{}", time.id(), time.startAt());
+            return false;
+        }
+        return true;
     }
 
     public void removeById(Long id) {
         if (reservationRepository.existsByTimeId(id)) {
-            throw new IllegalArgumentException("해당 시간에 예약이 존재하여 삭제할 수 없습니다.");
+            throw new RoomescapeException(ErrorCode.TIME_CANNOT_DELETE);
         }
         int deleteCnt = timeRepository.deleteById(id);
         if (deleteCnt == 0) {
-            throw new IllegalArgumentException("존재하지 않는 시간의 ID 입니다.");
+            throw new RoomescapeException(ErrorCode.TIME_NOT_FOUND);
         }
     }
 
     public TimeResponse register(TimeRequest timeRequest) {
         if (timeRepository.existsByStartAt(timeRequest.startAt())) {
-            throw new IllegalArgumentException("이미 존재하는 시간입니다.");
+            throw new RoomescapeException(ErrorCode.TIME_DUPLICATE);
         }
-
-        ReservationTime reservationTime = timeRepository.save(timeRequest.startAt());
+        ReservationTime reservationTime = timeRepository.save(
+                ReservationTime.withValidate(null, timeRequest.startAt()));
         return TimeResponse.from(reservationTime);
     }
 }
